<resources>
    <string name="imageView">imageView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">WisFit</string>
    <string name="Day_View">Day View</string>
    <string name="D">D</string>
    <string name="Week_View">Week View</string>
    <string name="W">W</string>
    <string name="Month_View">Month View</string>
    <string name="M">M</string>
    <string name="Heart_Rate">Heart Rate</string>
    <string name="update_title">注意</string>
    <string name="update_message">您的手機了已經存在該版本app了,是否直接安裝?</string>
    <string name="ent_name">群組名稱</string>
    <string name="ent_address">群組網址</string>
    <string name="edit_target">編輯目標</string>
    <string name="record_weight">記錄體重</string>
    <string name="weight">體重</string>
    <string name="distance_to_goal">距離目標還差</string>
    <string name="achieve_target">恭喜你達到目標值</string>
    <string name="summarizing_data">正在匯總數據...</string>
    <string name="login_activity_wechat">請安裝微信客戶端</string>
    <string name="login_activity_wechat_success">授權成功</string>
    <string name="login_activity_wechat_fail">授權失敗</string>
    <string name="login_activity_wechat_cancle">取消授權</string>
    <string name="date">日期:</string>
    <string name="data_by_week">周數據</string>
    <string name="data_by_month">月數據</string>
    <string name="data_by_year">年數據</string>
    <string name="change_weight_activity">修改體重</string>
    <string name="get_code">獲取驗證碼</string>
    <string name="synchronized_to_device">已同步到設備</string>
    <string name="choose_date">請選擇重複週期</string>
    <string name="send_confirm">我們將發送資訊到</string>
    <string name="send">發送</string>
    <string name="privacy_clause">隱私條款</string>
    <string name="service_provision">服務條款</string>
    <string name="common_problem">常見問題</string>
    <string name="group_details">群組詳情</string>
    <string name="password_modification_success">密碼修改成功</string>
    <string name="save_settings_successfully">保存設置成功</string>
    <string name="saved_to_local">確認</string>
    <string name="effective_time_is_invalid">生效時間無效</string>
    <string name="getting_version_information">正在獲取版本資訊</string>
    <string name="update_firmware">更新固件</string>
    <string name="being_written">正在寫入</string>
    <string name="start_upgrading">下載完成,開始升級</string>
    <string name="register_email"><u>郵箱註冊</u></string>
    <string name="body_activity">"設置身體資訊"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_message">短信驗證登錄</string>
    <string name="login_email">電子郵箱登錄</string>
    <string name="login_QQ">QQ登錄</string>
    <string name="login_wechat">微信登錄</string>
    <string name="comeback">返回</string>
    <string name="login_forgetpwd"><u>忘記密碼</u></string>
    <string name="login_phone_pwd">輸入6~20位的密碼</string>
    <string name="login_phone_pwd1">輸入6~20位的密碼</string>
    <string name="login_phone_phonenumber">您的手機號碼</string>
    <string name="login_support_country">中國</string>
    <string name="login_content_1">使用WisFit,即表示您同意WisFit的</string>
    <string name="login_content_2"><u>使用條款</u></string>
    <string name="login_content_3"><u>和</u></string>
    <string name="login_content_4"><u>隱私政策</u></string>
    <string name="login_yanzhengma">輸入驗證碼</string>
    <string name="login_from_email">您的電子郵件地址</string>
    <string name="login_other"><u>使用其他登錄</u></string>
    <string name="login_erification_code">輸入驗證碼</string>
    <string name="login_yanzhen_phone">正在驗證手機號碼...</string>
    <string name="login_error1">帳號不能為空</string>
    <string name="login_error2">請輸入正確的郵箱格式</string>
    <string name="login_error3">密碼不能為空</string>
    <string name="login_error4">密碼和用戶名不匹配</string>
    <string name="login_error5">網路錯誤,請檢查網路後重新登錄</string>
    <string name="login_error6">手機號應為11位</string>
    <string name="login_error7">郵箱不能為空</string>
    <string name="login_error8">帳號不存在</string>
    <string name="login_error9">驗證碼的是4位數字</string>
    <string name="login_error10">該號碼已經被註冊</string>
    <string name="changeinfo">正在提交到伺服器</string>
    <string name="changeinfook">修改成功</string>
    <string name="myfans">我的粉絲</string>
    <string name="myattention">我的關注</string>
    <string name="my_message">我的消息</string>
    <string name="find_friend">查找好友</string>
    <string name="near_people">附近的人</string>
    <string name="find_qunzu">查找群組</string>
    <string name="attention_activity_title">添加關注</string>
    <string name="relationship_search_people_count">{0}人</string>
    <string name="relationship_search_group_inputpsd">輸入密碼</string>
    <string name="relationship_search_group_psderror">密碼錯誤</string>
    <string name="relationship_search_group_success">加入成功!</string>
    <string name="relationship_search_group_continue">繼續..</string>
    <string name="relationship_search_group_features">群組功能</string>
    <string name="relationship_search_group_success1">您可以在更多頁面隨時退出群組功能</string>
    <string name="relationship_search_group_success2">您可以在更多頁面查看群組資訊</string>
    <string name="relationship_search_group_msg">在加入群組後,其他的群組成員可以查看您的資訊</string>
    <string name="relationship_search_group_nopasword">請輸入密碼</string>
    <string name="relationship_search_group_errpasword">密碼錯誤</string>
    <string name="relationship_search_join_group_message">確定加入 \"{0}\"?</string>
    <string name="relationship_search_already_group_message">你已經加入\"{0}\".</string>
    <string name="relationship_search_already_group_message_other">你已經加入了 \"{0}\"</string>
    <string name="relationship_search_join_succeed">加入成功!</string>
    <string name="relationship_search_join_failure">加入失敗!</string>
    <string name="main_more_exit_ent">退出群組</string>
    <string name="main_more_exit_ent_message">您確定要退出 \"{0}\" ?</string>
    <string name="main_more_exit_ent_success">退出成功!</string>
    <string name="main_more_exit_ent_faliure">退出失敗!</string>
    <string name="main_more_exit">退出</string>
    <string name="main_more_exit_group">群組</string>
    <string name="loadmore">上拉加載更多...</string>
    <string name="nick_name">昵稱</string>
    <string name="account">帳號</string>
    <string name="pwd">密碼</string>
    <string name="sex">性別</string>
    <string name="birthday">生日</string>
    <string name="lenth">身高</string>
    <string name="sign">個性簽名</string>
    <string name="address">地區</string>
    <string name="pesonal_activity_title">個人資料</string>
    <string name="friendinfo_activity_title">好友資料</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="lastmonth">上個月</string>
    <string name="thismonth">本月</string>
    <string name="lastweek">上周</string>
    <string name="thisweek">本周</string>
    <string name="lastyear">去年</string>
    <string name="thisyear">今年</string>
    <string name="cal_title">卡路里消耗</string>
    <string name="count_title">總時長</string>
    <string name="step_count">總步數</string>
    <string name="distance_count">總里程</string>
    <string name="shujumingxi">數據明細</string>
    <string name="monday">週一</string>
    <string name="tuesday">週二</string>
    <string name="wednesday">週三</string>
    <string name="thursday">週四</string>
    <string name="friday">週五</string>
    <string name="saturday">週六</string>
    <string name="sunday">周日</string>
    <string name="mon">一</string>
    <string name="tues">二</string>
    <string name="wed">三</string>
    <string name="thurs">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="sun">日</string>
    <string name="general_next">下一步</string>
    <string name="general_prompt">提示</string>
    <string name="general_got_it">知道了</string>
    <string name="general_ok">確定</string>
    <string name="general_save">保存</string>
    <string name="general_cancel">取消</string>
    <string name="general_yes">確定</string>
    <string name="general_no">取消</string>
    <string name="general_look">查看</string>
    <string name="general_error">出錯了</string>
    <string name="general_faild">失敗了</string>
    <string name="general_change">修改</string>
    <string name="general_retry">重試</string>
    <string name="general_loading">載入中...</string>
    <string name="general_network_faild">您的無線網路不給力！</string>
    <string name="general_clouding">正在同步...</string>
    <string name="general_clouding_success">同步完成</string>
    <string name="general_clouding_failure">同步失敗</string>
    <string name="general_wait">請稍候...</string>
    <string name="general_about">關於</string>
    <string name="general_send">發  送</string>
    <string name="general_share">分享</string>
    <string name="general_invild">無效</string>
    <string name="general_delete">刪除</string>
    <string name="general_not_delete">無法刪除</string>
    <string name="general_back">返回</string>
    <string name="general_tip">提示</string>
    <string name="general_male">男</string>
    <string name="general_more">更多</string>
    <string name="general_no_more_data">已經到底啦!</string>
    <string name="general_null_data">暫無數據</string>
    <string name="general_female">女</string>
    <string name="general_submitting">數據提交中...</string>
    <string name="general_uploading">正在下載檔...</string>
    <string name="general_nodata">無記錄</string>
    <string name="general_sport">運動</string>
    <string name="general_sleep">睡眠</string>
    <string name="general_null_label">這傢伙很懶，什麼也沒說</string>
    <string name="general_dialog_sync_text">已完成{0}%（共{1}條,已下載{2}條）</string>
    <string name="general_sync_time">最近同步於{0}, 共{1}條</string>
    <string name="general_sycing">同步中...</string>
    <string name="general_sync_end">同步完成</string>
    <string name="general_oading">升級中...</string>
    <string name="app_start">歡迎進入WisFit手錶</string>
    <string name="login_form_title">登錄WisFit手錶</string>
    <string name="login_form_hint_loginname">登錄郵箱</string>
    <string name="login_form_hint_loginpassword">密碼</string>
    <string name="login_form_btn_register">註冊</string>
    <string name="login_form_btn_login">登錄</string>
    <string name="login_form_logining">正在登錄中...</string>
    <string name="login_form_cb_rememberpsw">記住登錄帳號？</string>
    <string name="login_form_btn_forgetpsw">忘記密碼</string>
    <string name="login_form_btn_forgetpsw_message">郵件已發送至您郵箱,請核對!</string>
    <string name="login_form_version_info">版本: {0}({1})</string>
    <string name="login_form_validate_login_name_empty">請輸入登錄帳號！</string>
    <string name="login_form_validate_login_psw_length_less_six">請輸入密碼！</string>
    <string name="login_form_have_latest_version">新版更新提示</string>
    <string name="login_form_have_latest_version_descrption">我們強烈建議你更新到最新版以便獲得更好的服務。如需尋求幫助可聯繫\"support@linkloving.com\"。</string>
    <string name="login_form_have_latest_version_update_now">現在更新!</string>
    <string name="AutomaticHR">Automatic HR measurement</string>
    <string name="Thedevicewill">The device will measure heart rate automatically until it\'s closed</string>
    <string name="wearabledevice">Wearable Device</string>
    <string name="Pressthedecive">Press the devices\'s display for two seconds to switch the heart rate measurement automatically</string>
    <string name="realtime">Realtime</string>
    <string name="pm1">節能模式一(pm1)</string>
    <string name="pm1_content_1">pm1模式下:</string>
    <string name="pm1_content_2">抬手顯屏功能關閉</string>
    <string name="pm2">節能模式二(pm2)</string>
    <string name="pm2_content_1">pm2模式下:</string>
    <string name="pm2_content_2">1.抬手顯屏功能關閉</string>
    <string name="pm2_content_3">2.關閉所有提醒震動(但鬧鐘,倒計時均正常使用)</string>
    <string name="pm3">電量低於10%時，手錶將會自動進入節能模式三（pm3）</string>
    <string name="pm3_content_1">pm3模式下:</string>
    <string name="pm3_content_2">1.抬手顯屏功能關閉</string>
    <string name="pm3_content_3">2.鬧鐘，倒計時震動降低為1次，其他震動關閉</string>
    <string name="firmware_updating">firmware updating</string>
    <string name="Hint">提示</string>
    <string name="please_stay_in">please stay in this page until update completed</string>
</resources>