<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hint"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firmware_updating"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        />
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        />
    <TextView
        android:id="@+id/progressInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="0%"
        />
    <TextView
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:text="@string/please_stay_in"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/red"
        />



</LinearLayout>