<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:visibility="gone"
            android:id="@+id/dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@mipmap/triangle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/AutomaticHR"
            android:textColor="@color/blue"
            android:textSize="22sp" />

        <ImageView
            android:visibility="gone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@mipmap/selectline_yellow" />

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/realtime"
                android:textSize="20sp" />

            <Switch
                android:track="@drawable/switch_track"
                android:thumb="@android:color/transparent"
                android:switchMinWidth="50dp"
                android:id="@+id/realtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/selectline" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/Thedevicewill" />

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/wearabledevice"
                android:textSize="20sp"
                android:id="@+id/textView4" />

            <Switch
                android:track="@drawable/switch_track"
                android:thumb="@android:color/transparent"
                android:id="@+id/wearable"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:switchMinWidth="50dp"
                android:layout_marginEnd="14dp"
                android:layout_alignBaseline="@+id/textView4"
                android:layout_alignBottom="@+id/textView4"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/selectline" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/Pressthedecive" />




    </LinearLayout>

</LinearLayout>