<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_set"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
        android:id="@+id/power_Synchronize_device"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/power_btn_Synchronize_device"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@drawable/alarm_content_bg"
     android:id="@+id/linearLayout_pm1"
     android:layout_below="@+id/power_Synchronize_device"
     android:layout_marginTop="15dp"
     >

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
         <ImageView
             android:id="@+id/pm1_pic"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:layout_width="50dp"
             android:layout_height="80dp"
             android:src="@mipmap/battery_pm1"
             android:layout_gravity="center"
             />


         <!--
          android:id="@+id/text_pm2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/pm2"
            android:layout_gravity="center"
            android:textSize="20dp"/-->
         <TextView

             android:id="@+id/text_pm1"
             android:layout_toRightOf="@+id/pm1_pic"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="@string/pm1"
             android:layout_gravity="center"
             android:textSize="@dimen/m00_font_size_22pt"/>

         <ImageView
             android:paddingLeft="20dp"
             android:paddingEnd="10dp"
             android:layout_toRightOf="@+id/text_pm1"
             android:id="@+id/imageView_pm1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/btn_off"
             android:layout_gravity="center"/>

     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/pm1_underline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:src="@mipmap/underline_set"/>
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:orientation="vertical"
         >
         <TextView
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:id="@+id/text_pm1_content_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/pm1_content_1"/>

         <TextView
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:id="@+id/text_pm1_content_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/pm1_content_2"/>
     </LinearLayout>

 </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_pm2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alarm_content_bg"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/linearLayout_pm1"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:src="@mipmap/battery_pm2"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/text_pm2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/pm2"
            android:layout_gravity="center"
            android:textSize="@dimen/m00_font_size_22pt"/>
        <ImageView
            android:paddingLeft="20dp"
            android:paddingEnd="10dp"
            android:id="@+id/imageView_pm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/btn_off"
            android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/pm2_underline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@mipmap/underline_set"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            >
            <TextView
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/text_pm2_content_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pm2_content_1"/>
            <TextView
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="20dp"
                android:id="@+id/text_pm2_content_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/pm2_content_2"/>
            <TextView
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/text_pm2_content_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pm2_content_3"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/alarm_content_bg"
        android:id="@+id/linearLayout_pm3"
        android:layout_below="@+id/linearLayout_pm2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:src="@mipmap/battery_pm3"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/text_pm3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pm3"
                android:layout_gravity="center"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/pm3_underline"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"

                android:src="@mipmap/underline_set"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            >
            <TextView
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/text_pm3_content_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pm3_content_1"/>

            <TextView
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
            android:id="@+id/text_pm3_content_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pm3_content_2"/>

            <TextView
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/text_pm3_content_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pm3_content_3"/>
        </LinearLayout>


    </LinearLayout>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>
