<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="35dp">
            <TextView
                android:id="@+id/data_count_title"
                android:gravity="center_vertical"
                android:text="@string/distance_to_goal"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
            <TextView
                android:id="@+id/step_count"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text=""
                android:textSize="30dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
            <TextView
                android:id="@+id/unit_kg"
                android:text=""
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/goal"
                android:text="@string/edit_target"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/sleep_blue"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/set_weight"
                android:layout_weight="1"
                android:background="@color/sleep_blue"
                android:text="@string/record_weight"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <!--有数据的时候显示出来-->
        <LinearLayout
            android:id="@+id/shuju"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:background="@color/yellow_title"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/shujumingxi"
                />
            <ListView
                android:id="@+id/listview_step"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </ListView>
        </LinearLayout>

        <!--没有数据的时候显示出来-->
        <LinearLayout
            android:id="@+id/null_data_LL"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@mipmap/null_data" />
            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/general_null_data"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>



</LinearLayout>